# alphaforge-cmc-skill

./: .gitignore  README.md  pyproject.toml  requirements.txt  skill.md  vercel.json
.github/workflows/: ci.yml
api/: index.py
demo/: demo_output.md  demo_script.md  run_demo.py
demo/agent_hub_validation/: README.md
examples/: bnb_momentum_strategy.yaml  btc_panic_reversal_strategy.yaml  eth_sentiment_divergence_strategy.yaml
schemas/: strategy_spec.schema.json
scripts/: register_erc8004.py
skills/: catalog.json
src/alphaforge/: __init__.py  backtester.py  bsc_adapter.py  cmc_adapter.py  doctrine.py  features.py  intent_parser.py  monte_carlo.py  regime_classifier.py  report_generator.py  spec_generator.py  spec_validator.py  strategy_reviewer.py  strategy_templates.py  visualizer.py
templates/: panic_reversal.yaml  regime_aware_momentum.yaml  sentiment_divergence.yaml  volatility_breakout.yaml
tests/: test_backtester.py  test_doctrine.py  test_features.py  test_monte_carlo.py  test_regime_classifier.py  test_spec_validator.py  test_strategy_reviewer.py
video/: package-lock.json  package.json
video/src/: Intro.jsx  Outro.jsx  Root.jsx
web/: server.py
web/static/: app.js  index.html  style.css
