[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "alphaforge-cmc-skill"
version = "1.0.0"
description = "A Quantopian-style crypto strategy generation Skill powered by CoinMarketCap"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.7",
    "fastapi>=0.110",
]

[project.optional-dependencies]
dev = ["pytest"]
web = ["uvicorn>=0.29"]

[tool.pytest.ini_options]
testpaths = ["tests"]
